--- a/style.css
+++ b/style.css
@@ -720,6 +720,11 @@ figure{
 .section8_main_text p{
     max-width: 650px;
 }
+.section8_main_text h1{
+    font-size: 36px;
+    font-weight: 600;
+    color: #222222;
+}
 .section8_posts{
     display: flex;
     flex-wrap: wrap;
@@ -1049,7 +1054,7 @@ figure{
         font-size: 70px;
     }
     .section_5_texts p{
-        font-size: 50px;
+        font-size: 30px;
     }
     .section5_nav a{
         font-size: 30px;
@@ -1087,49 +1092,123 @@ figure{
         padding: 0 35px;
     }
     .s6_text h1{
-        font-size: 36px;
+        font-size: 100px;
         font-weight: 600;
         color: #222222;
-        line-height: 45px;
+        line-height: 100px;
+    }
+    .s6_text p{
+        font-size: 35px;
     }
     .feedback_section{
         flex-direction: column;
         row-gap: 30px;
         margin-top: 85px; 
         justify-content: center;
-        align-items: center;  
+        align-items: center; 
     }
     .feedback1{
-        display: flex;
-        max-width: 450px;
+        max-width: 940px;
+        height: auto;
         border: 1px solid rgb(224, 224, 224);
         box-shadow: 0 0 5px rgba(185, 185, 185, 0.7);
+    }
+    .feedback1 img{
+        width: 100.84px;
+        height: 100.84px;
+        padding: 20px 50px;
+    }
+    .feedback_text p{
+        font-size: 35px;
+    }
+    .feedback_text h4{
+        font-size: 50px;
     }
     /* s6 end*/
 
     /* s7 start*/
+    .section7_main_text h1{
+        font-size: 100px;
+    }
     .section7_main_text p{
         line-height: 25px;
-        max-width: 400px;
+        max-width: 800px;
+        font-size: 30px;
     }
     .section7_cards{
         display: flex;
         flex-direction: column;
         row-gap: 20px;
     }
+    .section7_card{
+        width: 783px;
+        height: 1428px;
+    }
+    .card_texts1 h1{
+        width: 500px;
+        height: 500px;
+        font-size: 100px;
+        border: 130px solid rgba(132, 144, 255, 0.1);
+    }
+    .card_texts1 h4{
+        font-size: 70px;
+    }
+    :is(.card_texts1, .card_texts2) p{
+        font-size: 35px;
+    }
+    .card_texts2 {
+        width: 80%;
+    }
+    .card_texts2 p{
+        padding: 40px;
+    }
+    .card_texts3 h1{
+        font-size: 70px;
+    }
+    .section7_card:hover a{
+        padding: 40px 225px;
+        font-size: 35px;
+    }
     /* s7 end*/
 
     /* s8 start*/
-    .section8_main_text p{
-        max-width: 420px;
+    .section8_main_text{
+        text-align: left;
     }
     .section8_main_text h1{
-        max-width: 420px;
+        font-size: 100px;
+    }
+    .section8_main_text p{
+        font-size: 30px;
+        max-width: 850px;
+    }
+    .section8_main_text h1{
+        max-width: 820px;
     }
     .section8_posts{
         display: flex;
         flex-direction: column;
         row-gap: 20px;
+    }
+    .posts_card{
+        width: 850px;
+        height: auto;
+    }
+    .img-box{
+        width: 850px;
+        height: 512px;
+    }
+    .logo_name img{
+        width: 70%;
+    }
+    .logo_name span{
+        font-size: 35px;
+    }
+    .date_area span{
+        font-size: 30px;
+    }
+    :is(.comment, .love) i{
+        font-size: 30px;
     }
     /* s8 end*/
 
