--- a/style.css
+++ b/style.css
@@ -244,7 +244,6 @@ a:hover{
     font-size: 14px;
     font-weight: 300;
     line-height: 1.625em;
-    max-width: 445px;
     margin-top: 40px;
 }
 .section2_texts button{
@@ -732,7 +731,9 @@ figure{
     text-align: center;
 }
 .section8_main_text p{
-    max-width: 650px;
+    max-width: fit-content;
+    font-size: 14px;;
+    color: #777;
 }
 .section8_main_text h1{
     font-size: 36px;
@@ -775,7 +776,7 @@ figure{
     align-items: center;
 }
 .logo_name span{
-    padding-left: 15px;
+    padding-left: 16px;
     color: rgb(73, 73, 73);
     font-size: 15px;
     font-weight: 300;
@@ -784,6 +785,16 @@ figure{
     display: flex;
     align-items: center;
     column-gap: 10px;
+}
+.date_area span{
+    color: #777;
+    font-size: 14px;
+    font-weight: 300;
+}
+:is(.comment, .love) i{
+    color: #777;
+    font-size: 14px;
+    font-weight: 300;
 }
 .postCard_bottom_text{
     padding-bottom: 40px;
@@ -808,21 +819,13 @@ figure{
     color: #8490ff;
     transition: 0.3s;
 }
-:is(.section8_main_text, .postCard_bottom_text) P{
+.postCard_bottom_text P{
     color: #777;
     font-size: 14px;
     font-weight: 300;
 }
-:is(.comment, .love) i{
-    color: #777;
-    font-size: 14px;
-    font-weight: 300;
-}
-.date_area span{
-    color: #777;
-    font-size: 14px;
-    font-weight: 300;
-}
+
+
 /*============================= Section8 end =============================*/
 
 /*============================= Section9 start =============================*/
@@ -949,7 +952,7 @@ figure{
     }
     li{
         clear: both;
-        margin-top: 0px;
+        margin-top: 10px;
     }
     #check:checked ~ ul{
         display: block;
@@ -1019,10 +1022,8 @@ figure{
         --h1-80px: 80px;
         --h3-50px: 50px;
         --p-30px: 30px;
-        --s2h1-50px: 50px;
-        --s2h3-12px: 12px;
-        --s2p-10px: 10px;
         --i-MOS-s3: 100px;
+        --lh-p-50x: 50px;
     }
     .section1_main{
         height: auto;
@@ -1048,6 +1049,7 @@ figure{
     }
     .section1_texts p{
         font-size: var(--p-30px);
+        line-height: var(--lh-p-50x);
     }
     .section1_texts button{
         padding: 40px 100px;
@@ -1090,14 +1092,14 @@ figure{
     .section2_texts h1{
         font-weight: bold;
         font-size: var(--h1-80px);
+        margin-top: 70px;
     }
     .section2_texts h3{
         font-size: var(--h3-50px);
     }
     .section2_texts p{
         font-size: var(--p-30px);
-        max-width: fit-content;
-        line-height: 50px;
+        line-height: var(--lh-p-50x);
     }
     .section2_texts button{
         padding: 40px 100px;
@@ -1115,23 +1117,25 @@ figure{
 
     /* s3 start*/
     .section3_texts{
-        text-align: center;
-        margin-right: 40px;
-        margin-left: 40px;
+        text-align: left;
+        margin: 50px 40px 0 40px;
+        box-sizing: border-box;
+        padding: 0 35px;
     }
     .section3_texts h1{
         font-size: var(--h1-80px);
-        line-height: 120px;
     }
     .section3_texts p{
+        max-width: fit-content;
         font-size: var(--p-30px);
-        max-width: 100%;
+        line-height: var(--lh-p-50x);
     }
     .boxs1{
         display: flex;
         flex-direction: column;
         gap: 100px;
-        line-height: 50px;
+        line-height: var(--lh-p-50x);
+        margin-top: 50px;
     }
     .box1{
         max-width: 900px;
@@ -1141,36 +1145,35 @@ figure{
         padding-top: 75px;
         position: relative;
         overflow: hidden;
+        box-sizing: border-box;
     }
     .box1::after{
         content: '';
         position: absolute;
         width: 150px;
         height: 150px;
-        background-color: #8490ff;
+        background: linear-gradient(90deg, #8490ff 0%,#62bdfc 100%);
         border-radius: 50%;
         right: -50px;
         top: 450px;
         transition: all 0.3s;
-        z-index: 0;
+        
     }
     .box1:hover::after{
-        width: 1000px;
-        height: 1000px;
+        width: 950px;
+        height: 600px;
         top: 0;
-        left: 0;
         right: 0;
         bottom: 0; 
         border-radius: 0%;
-        
+        opacity: 0.8;
     }
     .box1 h3{
         font-size: var(--h3-50px);
     }
     .box1 p{
         font-size: var(--p-30px);
-        line-height: 40px;
-        padding: 0 20px;
+        line-height: var(--lh-p-50x);
     }
     .box1 i{
         font-size: var(--i-MOS-s3);
@@ -1196,30 +1199,25 @@ figure{
     }
     .section4_texts p{
         font-size: var(--p-30px);
+        font-weight: 300;
     }
     /* s4 end*/
 
     /* s5 start*/
     .section_5_texts{
         text-align: center;
-        margin-left: 40px;
-        margin-right: 40px;
+        box-sizing: border-box;
+        padding: 0 35px;
+        margin: 150px 40px 0 40px;
     }
     .section_5_texts h1{
         font-size: var(--h1-80px);
         line-height: 100px;
+        text-align: center;
     }
     .section_5_texts p{
         font-size: var(--p-30px);
-    }
-    .section5_nav a{
-        font-size: 30px;
-    }
-    .section5_nav a:hover::after{
-        width: 50px;
-    }
-    .section5_nav ul li{
-        padding: 20px;
+        font-weight: 300;
     }
     .img_box1, .img_box2{
         flex-direction: column;
@@ -1237,29 +1235,33 @@ figure{
         font-size: 40px;
     }
     .main p{
-        font-size: 35px;
+        font-size: var(--p-30px);
     }
     /* s5 end*/
 
     /* s6 start*/
+    .s6_main{
+        padding-bottom: 180px;
+    }
     .s6_text{
-        text-align: center;
+        text-align: left;
+        margin: 100px 40px 0 40px;
         box-sizing: border-box;
         padding: 0 35px;
     }
     .s6_text h1{
-        font-size: 100px;
-        font-weight: 600;
-        color: #222222;
+        font-size: var(--h1-80px);
         line-height: 100px;
+        text-align: center;
     }
     .s6_text p{
-        font-size: 35px;
+        font-size: var(--p-30px);
+        line-height: 50px;
     }
     .feedback_section{
         flex-direction: column;
-        row-gap: 30px;
-        margin-top: 85px; 
+        row-gap: 40px;
+        margin-top: 100px; 
         justify-content: center;
         align-items: center; 
     }
@@ -1275,42 +1277,57 @@ figure{
         padding: 20px 50px;
     }
     .feedback_text p{
-        font-size: 35px;
+        font-size: var(--p-30px);
+        line-height: 50px;
     }
     .feedback_text h4{
-        font-size: 50px;
+        font-size: var(--h3-50px);
     }
     /* s6 end*/
 
     /* s7 start*/
+    .section7_main_text{
+        text-align: left;
+        margin: 100px 40px 0 40px;
+        box-sizing: border-box;
+        padding: 0 35px;
+    }
     .section7_main_text h1{
-        font-size: 100px;
+        font-size: var(--h1-80px);
+        text-align: center;
     }
     .section7_main_text p{
-        line-height: 25px;
-        max-width: 800px;
-        font-size: 30px;
+        line-height: var(--lh-p-50x);
+        font-size: var(--p-30px);
     }
     .section7_cards{
         display: flex;
         flex-direction: column;
-        row-gap: 20px;
+        row-gap: 30px;
+        margin-top: 200px;
     }
     .section7_card{
         width: 783px;
         height: 1428px;
     }
     .card_texts1 h1{
-        width: 500px;
-        height: 500px;
-        font-size: 100px;
-        border: 130px solid rgba(132, 144, 255, 0.1);
+        width: 450px;
+        height: 450px;
+        font-size: var(--h1-80px);
+        box-sizing: border-box;
+        border: 100px solid rgba(132, 144, 255, 0.1);
+    }
+    .section7_card:hover .card_texts1 h1{
+        width: 450px;
+        height: 450px;
+        background-color: rgba(250, 250, 250, 0.1);
+        border: 100px solid  rgba(207, 211, 247, 0.5);
     }
     .card_texts1 h4{
         font-size: 70px;
     }
     :is(.card_texts1, .card_texts2) p{
-        font-size: 35px;
+        font-size: var(--p-30px);
     }
     .card_texts2 {
         width: 80%;
@@ -1319,27 +1336,28 @@ figure{
         padding: 40px;
     }
     .card_texts3 h1{
-        font-size: 70px;
+        font-size: var(--h1-80px);
     }
     .section7_card:hover a{
-        padding: 40px 225px;
-        font-size: 35px;
+        padding: 40px 200px;
+        font-size: 50px;
     }
     /* s7 end*/
 
     /* s8 start*/
     .section8_main_text{
         text-align: left;
+        margin: 0 40px 0 40px;
+        box-sizing: border-box;
+        padding: 0 35px;
     }
     .section8_main_text h1{
-        font-size: 100px;
+        font-size: var(--h1-80px);
     }
     .section8_main_text p{
-        font-size: 25px;
-        max-width: 850px;
-    }
-    .section8_main_text h1{
-        max-width: 820px;
+        font-size: var(--p-30px);
+        max-width: fit-content;
+        line-height: var(--lh-p-50x);
     }
     .section8_posts{
         display: flex;
@@ -1363,11 +1381,17 @@ figure{
         width: 100px;
     }
     .logo_name span{
-        font-size: 35px;
+        font-size: var(--p-30px);
         width: fit-content;
     }
     .date_area span{
-        font-size: 35px;
+        font-size:  var(--p-30px);
+    }
+    .postCard_bottom_text p{
+        font-size: var(--p-30px);
+    }
+    .postCard_bottom_text h4{
+        font-size: 50px;
     }
     :is(.comment, .love) i{
         font-size: 35px;
@@ -1399,7 +1423,7 @@ figure{
         font-size: 70px;
     }
     .section10_main p{
-        font-size: 35px;
+        font-size: var(--p-30px);
     }
     .input_area input{
         height: 120px;
@@ -1408,6 +1432,14 @@ figure{
     }
     .input_area button{
         padding: 0.380rem 3.2rem;
+    }
+    .input_area i{
+        font-size: var(--p-30px);
+    }
+    .section10_div3 div i{
+        font-size: 30px;
+        padding: 0;
+        padding: 20px;
     }
     .section10_div1, .section10_div2, .section10_div3{
         width: 100%;
